--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Portfolio
+title: Alexander Kucheryuk Portfolio
 description: Alexander Kucheryuk Portfolio
 baseurl: "/portfolio-new"
 url: "https://alexkuc.github.io"
