--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Alexander Kucheryuk Portfolio
 description: Alexander Kucheryuk Portfolio
-baseurl: "/portfolio-new"
+baseurl: "/portfolio"
 url: "https://alexkuc.github.io"
 permalink: pretty
 
